--- a/398.html
+++ b/398.html
@@ -63,6 +63,12 @@
 <br>Я надеюсь, что вы не зря потратили время и настоящая статья хотя бы чем-нибудь поможет вам сделать ремонт звука на компьютере. В следующий раз вы сможете узнать о том, как починить cd или cd.
 <br>Заходите к нам на сайт почаще, чтобы быть в курсе всех последних событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
