--- a/401.html
+++ b/401.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы решили самостоятельно заниматься починкой, то сперва наперво стоит узнать о том, как заниматься починкой форда фокус 2. Для этого стоит воспользоваться yahoo, или позависать на профильном сообществе.
 <br>Я надеюсь, что данная статья помогла вам отремонтировать форд фокус 2. В следующий раз я напишу о том, как починить бачок или бачок.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
