--- a/406.html
+++ b/406.html
@@ -62,6 +62,12 @@
 <br>Я думаю, что вы не зря потратили свои усилия и эта статья поможет вам починить наушники. В следующий раз вы сможете прочесть о том, как отремонтировать сливной бачок унитаза или сливной бачок унитаза.
 <br>Заходите на наш портал еще, чтобы быть в курсе всех последних событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
