--- a/408.html
+++ b/408.html
@@ -62,6 +62,12 @@
 <br>Если вы решили самому ремонтировать, то сначала нужно узнать о том, как заниматься починкой калькулятора. Для этих целей можно воспользоваться любым поисковиком, скажем, yahoo, или посмотреть архивные номера журналов "Домашний умелец", "Моделист-конструктор" и т.д., или изучить популярный форум.
 <br>Надеюсь, что данная статья хотя бы немного поможет вам решить эту проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
