--- a/412.html
+++ b/412.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы решили самостоятельно делать починку, то сперва необходимо раздобыть инфу о том, как выполнять ремонт электродвигателя. Для этой цели можно воспользоваться bing.
 <br>Думаю, что вы не зря потратили свои усилия и настоящая статья помогла вам починить электродвигатель. В следующей статье вы сможете прочесть о том, как отремонтировать смеситель в ванной либо блок питания ноутбука.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
