--- a/414.html
+++ b/414.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы решили самому выполнять починку, то сперва надо узнать о том, как ремонтировать скутер. Для этого имеет смысл воспользоваться yandex.
 <br>Надеюсь, что вы не зря потратили свои усилия и настоящая статья хотя бы чем-то смогла помочь вам решить проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
