--- a/417.html
+++ b/417.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы приняли решение своими руками заниматься починкой, то сперва надо раздобыть информацию о том, как ремонтировать автомобиль. Для этого можно воспользоваться вашим любимым поисковиком, например, yandex или яхой, или задать вопрос на тематическом сообществе или форуме.
 <br>Думаю, что вы не напрасно потратили свое драгоценное время и настоящая статья помогла вам решить задачу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
