--- a/419.html
+++ b/419.html
@@ -61,6 +61,12 @@
 <br>Если вы все таки приняли решение собственными руками чинить, то сперва наперво нужно узнать о том, как ремонтировать счетчик воды. Для этого есть смысл воспользоваться каким-то поисковиком, или пролистать номера журналов наподобие "Моделист-конструктор".
 <br>Я надеюсь, что вы не зря потратили свое драгоценное время и эта статья хотя бы чем-то помогла вам решить вопрос. В следующей статье вы сможете узнать о том, как отремонтировать туалет либо туалет.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
