--- a/420.html
+++ b/420.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все таки приняли решение самостоятельно заниматься ремонтом, то сначала необходимо получить инфу о том, как чинить ваз 2112. Для этих целей стоит воспользоваться поисковиком, либо пересмотреть архивные номера журналов наподобие "Умелый мастер", или задать вопрос на форуме.
 <br>Я надеюсь, что настоящая статья помогла вам выполнить ремонт ваза 2112. В следующей статье я напишу о том, как отремонтировать нетбук или нетбук.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
