--- a/421.html
+++ b/421.html
@@ -61,6 +61,12 @@
 <br>Если вы все таки решили самому ремонтировать, то сперва наперво имеет смысл раздобыть инфу о том, как чинить дверную ручку. Для этой цели можно воспользоваться каким-либо поисковиком, скажем, гуглом, либо просмотреть номера журналов "Домашняя мастерская", "Мастер-ломастер", либо создать тему на профильном форуме или сообществе.
 <br>Надеюсь, что вы не напрасно потратили свое время и эта статья сможет помочь вам выполнить ремонт дверной ручки. В следующий раз вы сможете узнать о том, как отремонтировать акпп или usb.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
