--- a/423.html
+++ b/423.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы решили самому ремонтировать, то сначала нужно раздобыть инфу о том, как заниматься починкой microsd. Для этой цели есть смысл воспользоваться вашим любимым поисковиком, скажем, бингом, или посмотреть старые номера журналов "Юный техник", "Мастер-ломастер" и т.п., или задать вопрос на соответствующем форуме или сообществе.
 <br>Я надеюсь, что настоящая статья хотя бы чем-то сможет помочь вам сделать ремонт microsd. В следующей статье вы сможете узнать о том, как отремонтировать брик psp или дачный дом.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
