--- a/425.html
+++ b/425.html
@@ -62,6 +62,12 @@
 <br>Если вы все таки приняли решение собственными силами делать починку, то первым делом нужно раздобыть информацию о том, как чинить лазер. Для этих целей стоит воспользоваться поисковиком, например, rambler или google.
 <br>Я надеюсь, что вы не зря потратили свои усилия и данная статья хотя бы немного помогла вам отремонтировать лазер. В следующий раз вы сможете узнать о том, как починить туалет или туалет.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
