--- a/427.html
+++ b/427.html
@@ -62,6 +62,12 @@
 <br>Если вы все таки решили самому заниматься ремонтом, то сперва необходимо получить инфу о том, как ремонтировать акпп. Для этого стоит воспользоваться поисковиком, скажем, yandex, либо пообщаться на популярном сообществе либо форуме.
 <br>Надеюсь, что эта статья поможет вам решить данную проблему. В следующей статье вы сможете узнать о том, как отремонтировать вертолет или cd.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
