--- a/429.html
+++ b/429.html
@@ -61,6 +61,12 @@
 <br>Если вы приняли решение самому выполнять починку, то сперва надо раздобыть инфу о том, как чинить сварочный аппарат. Для этой цели имеет смысл воспользоваться поисковиком, например, rambler или яхой, или почитать номера журналов "Чиним все самостоятельно", либо зайти на форум или сообщество.
 <br>Я думаю, что настоящая статья хотя бы чем-то помогла вам решить этот вопрос. В следующий раз вы сможете узнать о том, как отремонтировать сотовый либо сотовый.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
