--- a/430.html
+++ b/430.html
@@ -61,6 +61,12 @@
 <br>Если вы все же решили самому заниматься починкой, то сперва имеет смысл получить информацию о том, как ремонтировать беспроводную мышь. Для этой цели стоит воспользоваться bing или yandex, либо посмотреть подишивки журналов наподобие "Мастер-ломастер", или почитать форум либо сообщество.
 <br>Думаю, что вы не зря потратили время и эта статья хотя бы чем-нибудь сможет помочь вам отремонтировать беспроводную мышь. В следующей статье вы сможете узнать о том, как починить винчестер или спиннинг.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
