--- a/437.html
+++ b/437.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все таки решили своими руками ремонтировать, то сперва необходимо узнать о том, как чинить вал. Для этих целей стоит воспользоваться рамблером.
 <br>Надеюсь, что вы не зря потратили свое драгоценное время и эта статья поможет вам починить вал. В следующий раз вы сможете прочесть о том, как починить электрочайник или компьютерный стул.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
