--- a/439.html
+++ b/439.html
@@ -62,6 +62,12 @@
 <br>Если вы приняли решение самостоятельно ремонтировать, то сперва необходимо узнать о том, как делать починку спининга. Для этих целей можно воспользоваться поисковиком, или найти ответ на данный вопрос на специализированном форуме.
 <br>Я надеюсь, что эта статья помогла вам решить эту проблему. В следующей статье я расскажу о том, как починить пробел либо счетчик.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
