--- a/441.html
+++ b/441.html
@@ -62,6 +62,12 @@
 <br>Если вы приняли решение самому ремонтировать, то сперва наперво необходимо раздобыть информацию о том, как выполнять починку панели авто. Для этих целей есть смысл воспользоваться любым поисковиком, например, yandex или yahoo, или почитать номера журналов типа "Сам себе мастер", "Моделист-конструктор", или создать тему на профильном сообществе либо форуме.
 <br>Надеюсь, что настоящая статья хотя бы чем-то поможет вам выполнить ремонт панели авто. В следующей статье я расскажу о том, как отремонтировать компрессор или цепочку.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
