--- a/442.html
+++ b/442.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы решили самому ремонтировать, то сперва необходимо раздобыть информацию о том, как ремонтировать протертые джинсы. Для этих целей можно воспользоваться поисковиком, или пролистать архивные номера журналов "Домашний мастер", "Юный техник" и так далее.
 <br>Надеюсь, что вы не зря потратили свое время и эта статья хотя бы немного поможет вам решить вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
