--- a/397.html
+++ b/397.html
@@ -64,12 +64,10 @@
 <!-- Код после текста --></p>
 
 
-<a href="https://github.com/rollisa/ccssc">https://github.com/rollisa/ccssc</a></br>
-<a href="https://github.com/rollisa/css">https://github.com/rollisa/css</a></br>
-<a href="https://github.com/rollisa/css-html">https://github.com/rollisa/css-html</a></br>
-<a href="https://github.com/rollisa/phps">https://github.com/rollisa/phps</a></br>
-<a href="https://github.com/rollisa/respo">https://github.com/rollisa/respo</a></br>
-<a href="https://github.com/rollisa/css5">https://github.com/rollisa/css5</a></br></br>
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
