--- a/399.html
+++ b/399.html
@@ -63,6 +63,12 @@
 <br>Я думаю, что вы не зря потратили свое драгоценное время и данная статья поможет вам отремонтировать фасад. В следующей статье я расскажу о том, как отремонтировать бмв или поликарбонат.
 <br>Заходите на наш сайт почаще, чтобы быть в курсе всех новых событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
