--- a/400.html
+++ b/400.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы все же приняли решение своими силами ремонтировать, то сперва наперво необходимо узнать о том, как заниматься ремонтом протертых джинсов. Для этого можно воспользоваться google, или почитать старые номера журналов "Домашний мастер", либо поискать ответ на данный вопрос на профильном форуме или сообществе.
 <br>Думаю, что эта статья хотя бы немного поможет вам сделать ремонт протертых джинсов.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
