--- a/403.html
+++ b/403.html
@@ -63,6 +63,12 @@
 <br>Я думаю, что данная статья хотя бы чем-то помогла вам отремонтировать душевую кабину. В следующей статье вы сможете узнать о том, как отремонтировать нетбук либо автомагнитолу.
 <br>Заходите на наш портал еще, чтобы быть в курсе всех новых событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
