--- a/404.html
+++ b/404.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все же решили собственными руками чинить, то первым делом нужно получить информацию о том, как ремонтировать поликарбонат. Для этого можно воспользоваться вашим любимым поисковиком.
 <br>Надеюсь, что данная статья хотя бы чем-то сможет помочь вам решить данную задачу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
