--- a/409.html
+++ b/409.html
@@ -62,6 +62,12 @@
 <br>Думаю, что эта статья хотя бы немного смогла помочь вам отремонтировать ps3. 
 <br>Заходите на наш портал почаще, чтобы быть в курсе всех новых событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
