--- a/410.html
+++ b/410.html
@@ -62,6 +62,12 @@
 <br>Думаю, что вы не зря потратили свои усилия и данная статья хотя бы немного помогла вам починить поддон душевой кабины. В следующей статье я расскажу о том, как отремонтировать автоматический зонт или автоматический зонт.
 <br>Заходите на наш портал еще, чтобы быть в курсе всех свежих событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
