--- a/411.html
+++ b/411.html
@@ -63,6 +63,12 @@
 <br>Думаю, что вы не напрасно потратили свои усилия и данная статья смогла помочь вам починить топливный бак. 
 <br>Заходите к нам на сайт еще, чтобы быть в курсе всех актуальных событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
