--- a/415.html
+++ b/415.html
@@ -62,6 +62,12 @@
 <br>Думаю, что эта статья хотя бы чем-нибудь сможет помочь вам починить телефонный кабель. В следующий раз я расскажу о том, как починить джойстик на psp либо аккумулятор ноутбука.
 <br>Заходите к нам еще, чтобы быть в курсе всех свежих событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
