--- a/416.html
+++ b/416.html
@@ -60,6 +60,12 @@
 <br>Если вы приняли решение самостоятельно чинить, то сначала стоит раздобыть инфу о том, как выполнять ремонт фары. Для этих целей можно воспользоваться каким-либо поисковиком, либо посмотреть архивные выпуски журналов "Сам себе мастер", "Домашняя мастерская" и подобных.
 <br>Я надеюсь, что вы не зря потратили свое драгоценное время и настоящая статья хотя бы чем-нибудь смогла помочь вам сделать ремонт фары. В следующий раз я расскажу о том, как починить блок розжига или тросик спидометра.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
