--- a/418.html
+++ b/418.html
@@ -62,6 +62,12 @@
 <br>Надеюсь, что вы не зря потратили время и эта статья поможет вам выполнить ремонт шарового смесителя. В следующей статье я напишу о том, как отремонтировать акпп или фундамент деревянного дома.
 <br>Заходите к нам почаще, чтобы быть в курсе всех последних событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
