--- a/426.html
+++ b/426.html
@@ -63,6 +63,12 @@
 <br>Надеюсь, что настоящая статья хотя бы немного поможет вам решить данную проблему. В следующей статье я расскажу о том, как отремонтировать фасад или фасад.
 <br>Заходите на наш сайт еще, чтобы быть в курсе всех свежих событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
