--- a/428.html
+++ b/428.html
@@ -62,6 +62,12 @@
 <br>Надеюсь, что вы не напрасно потратили время и настоящая статья поможет вам решить задачу. В следующий раз я напишу о том, как отремонтировать нетбук или коляску.
 <br>Заходите на наш портал почаще, чтобы быть в курсе всех актуальных событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
