--- a/432.html
+++ b/432.html
@@ -61,6 +61,12 @@
 <br>Я надеюсь, что вы не напрасно потратили свое время и эта статья сможет помочь вам сделать ремонт usb. 
 <br>Заходите к нам почаще, чтобы быть в курсе всех последних событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
