--- a/433.html
+++ b/433.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы приняли решение собственными силами ремонтировать, то первым делом стоит узнать о том, как чинить штекер. Для этой цели можно воспользоваться каким-то поисковиком, например, bing либо google.
 <br>Я думаю, что настоящая статья хотя бы немного поможет вам починить штекер.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
