--- a/434.html
+++ b/434.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы решили самому ремонтировать, то первым делом стоит узнать о том, как выполнять починку кнопки. Для этого можно воспользоваться яхой, либо пообщаться на специализированном форуме или сообществе.
 <br>Я думаю, что вы не напрасно потратили усилия и данная статья поможет вам починить кнопку. В следующей статье я напишу о том, как отремонтировать экран телефона либо розетку.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
