--- a/435.html
+++ b/435.html
@@ -63,6 +63,12 @@
 <br>Я думаю, что настоящая статья может помочь вам починить бензогенератор. 
 <br>Заходите к нам еще, чтобы быть в курсе всех новых событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
