--- a/436.html
+++ b/436.html
@@ -60,6 +60,12 @@
 <br>Если вы приняли решение самому ремонтировать, то сперва наперво необходимо раздобыть инфу о том, как заниматься ремонтом дисплея. Для этой цели можно воспользоваться yahoo или бингом, или изучить специализированный форум или сообщество.
 <br>Я думаю, что настоящая статья хотя бы немного сможет помочь вам решить вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
