--- a/438.html
+++ b/438.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы решили самостоятельно заниматься ремонтом, то сперва наперво есть смысл узнать о том, как делать ремонт кнопки на ноутбуке. Для этой цели можно воспользоваться яхой или рамблером, или просмотреть подишивки журналов "Мастер-ломастер", "Моделист-конструктор", "Юный техник" и тому подобное.
 <br>Надеюсь, что эта статья хотя бы чем-то сможет помочь вам решить этот вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
