--- a/440.html
+++ b/440.html
@@ -62,6 +62,12 @@
 <br>Я надеюсь, что настоящая статья поможет вам отремонтировать кожаную куртку. 
 <br>Заходите к нам почаще, чтобы быть в курсе всех последних событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
