--- a/444.html
+++ b/444.html
@@ -62,6 +62,12 @@
 <br>Если вы приняли решение своими силами выполнять ремонт, то первым делом надо получить инфу о том, как чинить мягкую мебель. Для этого имеет смысл воспользоваться yandex, либо просмотреть подишивки журналов наподобие "Ремонтируем самостоятельно" или "Мастер-ломастер", или создать тему на популярном форуме или сообществе.
 <br>Я думаю, что вы не зря потратили время и данная статья хотя бы немного помогла вам отремонтировать мягкую мебель.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
