--- a/445.html
+++ b/445.html
@@ -62,6 +62,12 @@
 <br>Если вы все таки приняли решение самостоятельно заниматься починкой, то сперва нужно узнать о том, как заниматься починкой мотоблока. Для этих целей имеет смысл воспользоваться мэилру, или пересмотреть архивные выпуски журналов "Домашний умелец", или посетить популярный форум или сообщество.
 <br>Я думаю, что настоящая статья поможет вам решить задачу. В следующей статье я расскажу о том, как отремонтировать бетон или сабвуфер.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
