--- a/446.html
+++ b/446.html
@@ -61,6 +61,12 @@
 <br>Если вы приняли решение своими руками заниматься починкой, то сперва наперво необходимо получить инфу о том, как чинить замок на двери. Для этой цели можно воспользоваться каким-либо поисковиком, либо поискать ответ на соответствующий вопрос на специализированном форуме или сообществе.
 <br>Я надеюсь, что данная статья хотя бы чем-то поможет вам починить замок на двери.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
