--- a/450.html
+++ b/450.html
@@ -64,6 +64,12 @@
 <br>Я надеюсь, что данная статья хотя бы чем-нибудь смогла помочь вам решить вопрос. В следующий раз вы сможете прочесть о том, как отремонтировать звонок или кузов автомобиля.
 <br>Заходите к нам еще, чтобы быть в курсе всех актуальных событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
