--- a/452.html
+++ b/452.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы приняли решение самостоятельно выполнять ремонт, то сначала надо узнать о том, как выполнять ремонт балкона. Для этого стоит воспользоваться любым поисковиком, скажем, google или бингом, или создать тему на тематическом сообществе или форуме.
 <br>Надеюсь, что эта статья хотя бы немного смогла помочь вам решить эту проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
