--- a/459.html
+++ b/459.html
@@ -61,6 +61,12 @@
 <br>Если вы решили самому заниматься ремонтом, то первым делом стоит получить информацию о том, как заниматься ремонтом bluetooth. Для этих целей стоит воспользоваться bing либо mail.ru.
 <br>Надеюсь, что данная статья поможет вам решить данную задачу. В следующий раз я расскажу о том, как отремонтировать радиатор или радиатор.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
