--- a/461.html
+++ b/461.html
@@ -61,6 +61,12 @@
 <br>Если вы приняли решение самому заниматься ремонтом, то сперва необходимо узнать о том, как заниматься починкой газ 3302. Для этой цели можно воспользоваться yahoo или yandex, либо просмотреть старые подишивки журналов "Ремонтируем собственными руками", "Умелый мастер", "Моделист-конструктор" и подобных, или почитать соответствующий форум или сообщество.
 <br>Я надеюсь, что настоящая статья поможет вам решить этот вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
