--- a/466.html
+++ b/466.html
@@ -62,6 +62,12 @@
 <br>Если вы все же приняли решение самостоятельно ремонтировать, то сперва надо раздобыть информацию о том, как чинить домкрат. Для этой цели есть смысл воспользоваться гуглом либо rambler, либо почитать старые выпуски журналов наподобие "Домашняя мастерская" или "Чиним самостоятельно".
 <br>Я надеюсь, что эта статья помогла вам отремонтировать домкрат. В следующей статье я напишу о том, как починить монитор samsung либо монитор samsung.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
