--- a/469.html
+++ b/469.html
@@ -60,6 +60,12 @@
 <br>Если вы все же решили самому делать починку, то первым делом нужно узнать о том, как выполнять ремонт тнвд. Для этих целей есть смысл воспользоваться яхой или bing, или почитать соответствующий форум.
 <br>Я думаю, что вы не напрасно потратили свои усилия и настоящая статья хотя бы немного может помочь вам решить данную задачу. В следующей статье вы сможете узнать о том, как починить топливный бак или топливный бак.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
