--- a/470.html
+++ b/470.html
@@ -62,6 +62,12 @@
 <br>Если вы решили собственными силами чинить, то сперва надо получить инфу о том, как заниматься починкой вариатора. Для этого можно воспользоваться каким-нибудь поисковиком, скажем, бингом, или почитать популярный форум.
 <br>Я думаю, что вы не зря потратили свои усилия и данная статья может помочь вам решить проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
