--- a/473.html
+++ b/473.html
@@ -64,6 +64,12 @@
 <br>Я надеюсь, что вы не зря потратили свое время и данная статья помогла вам решить вопрос. В следующей статье я напишу о том, как починить вентилятор или вентилятор.
 <br>Заходите к нам на сайт еще, чтобы быть в курсе всех свежих событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
