--- a/477.html
+++ b/477.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все же решили самостоятельно чинить, то сперва наперво необходимо раздобыть информацию о том, как заниматься ремонтом интернета. Для этого есть смысл воспользоваться mail.ru или гуглом, или пересмотреть архивные номера журналов "Юный техник", "Моделист-конструктор", "Сам себе мастер" и подобные, или почитать профильный форум.
 <br>Я думаю, что эта статья хотя бы чем-нибудь поможет вам сделать починку интернета.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
