--- a/478.html
+++ b/478.html
@@ -62,6 +62,12 @@
 <br>Если вы все же решили самому заниматься ремонтом, то сперва надо получить информацию о том, как ремонтировать блендер. Для этих целей стоит воспользоваться мэилру или bing, или пообщаться на популярном сообществе или форуме.
 <br>Надеюсь, что вы не зря потратили свои усилия и настоящая статья хотя бы чем-то поможет вам решить данную задачу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
