--- a/479.html
+++ b/479.html
@@ -62,6 +62,12 @@
 <br>Я думаю, что данная статья хотя бы чем-то сможет помочь вам решить вопрос. В следующей статье вы сможете прочесть о том, как починить генератор или генератор.
 <br>Заходите к нам на сайт почаще, чтобы быть в курсе всех свежих событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
