--- a/487.html
+++ b/487.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все же решили самостоятельно делать ремонт, то сперва необходимо узнать о том, как чинить гараж. Для этих целей стоит воспользоваться любым поисковиком, или просмотреть архивные номера журналов "Юный техник" или "Домашний умелец", или создать тему на профильном сообществе или форуме.
 <br>Я думаю, что настоящая статья хотя бы немного помогла вам отремонтировать гараж.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
