--- a/488.html
+++ b/488.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все таки решили самому чинить, то первым делом нужно узнать о том, как выполнять починку беспроводной мыши. Для этого стоит воспользоваться бингом либо яхой, или задать вопрос на популярном сообществе.
 <br>Надеюсь, что вы не напрасно потратили время и настоящая статья помогла вам решить проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
