--- a/490.html
+++ b/490.html
@@ -61,6 +61,12 @@
 <br>Если вы все таки решили самостоятельно ремонтировать, то сперва наперво стоит узнать о том, как ремонтировать мягкую мебель. Для этих целей стоит воспользоваться каким-то поисковиком, например, mail.ru или рамблером, или почитать специализированный форум.
 <br>Надеюсь, что вы не зря потратили усилия и эта статья сможет помочь вам отремонтировать мягкую мебель.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
