--- a/491.html
+++ b/491.html
@@ -63,6 +63,12 @@
 <br>Итак, если вы приняли решение собственными силами ремонтировать, то первым делом надо получить информацию о том, как ремонтировать брюки. Для этих целей можно воспользоваться любым поисковиком, например, bing, либо задать вопрос на сообществе либо форуме.
 <br>Надеюсь, что вы не зря потратили усилия и эта статья поможет вам решить эту проблему. В следующий раз я напишу о том, как отремонтировать вентиль или вентиль.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
