--- a/493.html
+++ b/493.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все же приняли решение собственными руками заниматься ремонтом, то сперва наперво имеет смысл раздобыть информацию о том, как чинить мотоцикл урал. Для этого имеет смысл воспользоваться каким-либо поисковиком.
 <br>Надеюсь, что вы не зря потратили свое драгоценное время и настоящая статья хотя бы чем-то помогла вам решить проблему.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
