--- a/496.html
+++ b/496.html
@@ -61,6 +61,12 @@
 <br>Если вы приняли решение самому выполнять ремонт, то сперва наперво надо узнать о том, как ремонтировать гидрокостюм. Для этих целей стоит воспользоваться yahoo, или почитать выпуски журналов "Ремонтируем самому", или найти ответ на нужный вопрос на специализированном форуме.
 <br>Я думаю, что эта статья поможет вам решить эту задачу. В следующей статье вы сможете прочесть о том, как отремонтировать лодочный мотор или лодочный мотор.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
