--- a/499.html
+++ b/499.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы приняли решение своими руками чинить, то сначала надо раздобыть инфу о том, как ремонтировать фен. Для этой цели есть смысл воспользоваться поисковиком.
 <br>Я думаю, что вы не напрасно потратили свое время и эта статья поможет вам решить проблему. В следующий раз я напишу о том, как починить акведук или акведук.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
