--- a/447.html
+++ b/447.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы решили самому заниматься починкой, то сперва нужно узнать о том, как ремонтировать кухню в хрущевке. Для этих целей можно воспользоваться яхой или google, либо просмотреть архивные подишивки журналов "Умелый мастер", "Моделист-конструктор" и т.п., либо задать вопрос на специализированном сообществе.
 <br>Думаю, что вы не напрасно потратили время и эта статья помогла вам сделать починку кухни в хрущевке. В следующий раз я напишу о том, как починить смеситель или турбину.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
