--- a/448.html
+++ b/448.html
@@ -61,6 +61,12 @@
 <br>Надеюсь, что вы не зря потратили свое время и эта статья хотя бы чем-нибудь сможет помочь вам решить задачу. В следующий раз я расскажу о том, как починить принтер epson или кофеварку.
 <br>Заходите к нам еще, чтобы быть в курсе всех актуальных событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
