--- a/451.html
+++ b/451.html
@@ -63,6 +63,12 @@
 <br>Если вы все таки приняли решение самостоятельно заниматься ремонтом, то сначала надо узнать о том, как чинить форд фокус 2. Для этих целей стоит воспользоваться каким-либо поисковиком, либо пересмотреть архивные выпуски журналов "Сам себе мастер", "Ремонтируем собственными руками" и тому подобное, либо задать вопрос на профильном сообществе.
 <br>Надеюсь, что вы не зря потратили время и настоящая статья поможет вам выполнить ремонт форда фокус 2.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
