--- a/453.html
+++ b/453.html
@@ -62,6 +62,12 @@
 <br>Я надеюсь, что вы не зря потратили время и данная статья хотя бы немного сможет помочь вам починить комп. 
 <br>Заходите на наш сайт еще, чтобы быть в курсе всех последних событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
