--- a/457.html
+++ b/457.html
@@ -64,6 +64,12 @@
 <br>Я думаю, что настоящая статья сможет помочь вам решить вопрос. В следующей статье я расскажу о том, как починить термостат или насос.
 <br>Заходите к нам еще, чтобы быть в курсе всех последних событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
