--- a/458.html
+++ b/458.html
@@ -63,6 +63,12 @@
 <br>Я думаю, что вы не зря потратили время и настоящая статья хотя бы немного поможет вам решить проблему. В следующей статье вы сможете прочесть о том, как отремонтировать стартер либо bluetooth.
 <br>Заходите к нам на сайт еще, чтобы быть в курсе всех новых событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
