--- a/460.html
+++ b/460.html
@@ -63,6 +63,12 @@
 <br>Я думаю, что вы не зря потратили усилия и эта статья помогла вам решить эту задачу. 
 <br>Заходите на наш портал почаще, чтобы быть в курсе всех актуальных событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
