--- a/462.html
+++ b/462.html
@@ -63,6 +63,12 @@
 <br>Если вы решили самостоятельно ремонтировать, то первым делом надо узнать о том, как чинить мышку. Для этих целей стоит воспользоваться поисковиком, например, рамблером или bing.
 <br>Я думаю, что вы не напрасно потратили усилия и данная статья помогла вам решить данный вопрос.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
