--- a/464.html
+++ b/464.html
@@ -62,6 +62,12 @@
 <br>Думаю, что настоящая статья сможет помочь вам решить вопрос. В следующий раз я расскажу о том, как отремонтировать замок на двери либо bluetooth.
 <br>Заходите на наш портал почаще, чтобы быть в курсе всех актуальных событий и интересной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
