--- a/465.html
+++ b/465.html
@@ -62,6 +62,12 @@
 <br>Я надеюсь, что вы не напрасно потратили время и эта статья хотя бы немного поможет вам отремонтировать стойки. 
 <br>Заходите на наш портал еще, чтобы быть в курсе всех новых событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
