--- a/468.html
+++ b/468.html
@@ -62,6 +62,12 @@
 <br>Думаю, что вы не зря потратили усилия и настоящая статья хотя бы немного помогла вам решить вопрос. 
 <br>Заходите к нам почаще, чтобы быть в курсе всех свежих событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
