--- a/471.html
+++ b/471.html
@@ -63,6 +63,12 @@
 <br>Надеюсь, что эта статья хотя бы чем-то может помочь вам решить вопрос. 
 <br>Заходите на наш портал почаще, чтобы быть в курсе всех свежих событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
