--- a/474.html
+++ b/474.html
@@ -62,6 +62,12 @@
 <br>Если вы решили своими силами чинить, то сперва наперво имеет смысл узнать о том, как ремонтировать самовар. Для этой цели имеет смысл воспользоваться бингом или гуглом, или почитать подишивки журналов "Юный техник", "Домашний мастер" и тому подобное.
 <br>Надеюсь, что настоящая статья хотя бы немного поможет вам сделать починку самовара.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
