--- a/475.html
+++ b/475.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все таки решили своими силами выполнять починку, то сперва нужно раздобыть инфу о том, как чинить энергосберегающую лампу. Для этих целей есть смысл воспользоваться рамблером либо мэилру.
 <br>Надеюсь, что вы не напрасно потратили свои усилия и данная статья хотя бы чем-нибудь поможет вам решить проблему. В следующий раз вы сможете прочесть о том, как отремонтировать стабилизатор или трещину на стекле.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
