--- a/476.html
+++ b/476.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все таки приняли решение собственными руками чинить, то сначала нужно узнать о том, как заниматься починкой сварочного инвертора. Для этих целей можно воспользоваться любым поисковиком, скажем, mail.ru, или пролистать старые подишивки журналов наподобие "Умелый мастер" или "Сам себе мастер".
 <br>Я надеюсь, что вы не напрасно потратили усилия и эта статья хотя бы чем-то сможет помочь вам починить сварочный инвертор. В следующий раз вы сможете прочесть о том, как починить сноуборд или сноуборд.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
