--- a/480.html
+++ b/480.html
@@ -62,6 +62,12 @@
 <br>Надеюсь, что вы не напрасно потратили свои усилия и данная статья поможет вам решить эту проблему. В следующей статье я расскажу о том, как починить фен или вилку.
 <br>Заходите к нам почаще, чтобы быть в курсе всех новых событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
