--- a/481.html
+++ b/481.html
@@ -61,6 +61,12 @@
 <br>Если вы все же приняли решение самостоятельно выполнять починку, то сперва наперво необходимо узнать о том, как ремонтировать тахометр. Для этого стоит воспользоваться поисковиком, либо посмотреть старые номера журналов "Мастер-ломастер", "Умелый мастер", "Домашний умелец" и им подобные, или задать вопрос на форуме.
 <br>Я надеюсь, что вы не зря потратили свои усилия и данная статья хотя бы немного помогла вам сделать ремонт тахометра.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
