--- a/482.html
+++ b/482.html
@@ -61,6 +61,12 @@
 <br>Я надеюсь, что данная статья хотя бы чем-то может помочь вам решить проблему. В следующей статье вы сможете узнать о том, как отремонтировать блендер браун либо блендер браун.
 <br>Заходите на наш сайт почаще, чтобы быть в курсе всех последних событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
