--- a/483.html
+++ b/483.html
@@ -62,6 +62,12 @@
 <br>Я думаю, что эта статья хотя бы чем-нибудь смогла помочь вам сделать починку провода наушников. В следующей статье я расскажу о том, как отремонтировать денди или натяжной потолок.
 <br>Заходите на наш портал еще, чтобы быть в курсе всех новых событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
