--- a/484.html
+++ b/484.html
@@ -61,6 +61,12 @@
 <br>Итак, если вы все же решили самому заниматься починкой, то первым делом стоит узнать о том, как чинить лодочный мотор. Для этих целей можно воспользоваться мэилру или bing, или зайти на тематический форум.
 <br>Я думаю, что вы не напрасно потратили свое драгоценное время и данная статья хотя бы чем-нибудь помогла вам решить задачу.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
