--- a/485.html
+++ b/485.html
@@ -62,6 +62,12 @@
 <br>Думаю, что вы не зря потратили свои усилия и настоящая статья хотя бы чем-нибудь смогла помочь вам отремонтировать кулер. В следующий раз я расскажу о том, как отремонтировать телефон или вал.
 <br>Заходите к нам почаще, чтобы быть в курсе всех актуальных событий и новой информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
