--- a/486.html
+++ b/486.html
@@ -62,6 +62,12 @@
 <br>Я думаю, что вы не напрасно потратили усилия и данная статья хотя бы чем-нибудь поможет вам решить данный вопрос. 
 <br>Заходите к нам еще, чтобы быть в курсе всех новых событий и актуальной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
