--- a/489.html
+++ b/489.html
@@ -61,6 +61,12 @@
 <br>Если вы все же решили своими силами ремонтировать, то первым делом надо узнать о том, как ремонтировать радио. Для этих целей можно воспользоваться любым поисковиком, либо зайти на популярный форум.
 <br>Надеюсь, что эта статья смогла помочь вам отремонтировать радио. В следующей статье вы сможете узнать о том, как починить самовар или шаровый смеситель.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
