--- a/492.html
+++ b/492.html
@@ -61,6 +61,12 @@
 <br>Я надеюсь, что вы не зря потратили время и настоящая статья хотя бы чем-нибудь помогла вам решить данную задачу. 
 <br>Заходите на наш портал еще, чтобы быть в курсе всех последних событий и полезной информации.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
