--- a/494.html
+++ b/494.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы все же решили самостоятельно выполнять починку, то сначала надо раздобыть информацию о том, как ремонтировать форд фокус 2. Для этой цели имеет смысл воспользоваться поисковиком, или почитать архивные выпуски журналов "Мастер-ломастер", "Моделист-конструктор" и т.д., или позависать на специализированном форуме.
 <br>Надеюсь, что вы не зря потратили время и эта статья помогла вам отремонтировать форд фокус 2.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
