--- a/495.html
+++ b/495.html
@@ -61,6 +61,12 @@
 <br>Если вы все таки решили самому заниматься ремонтом, то сперва стоит узнать о том, как ремонтировать бескамерную шину. Для этого имеет смысл воспользоваться поисковиком, например, mail.ru, либо почитать подишивки журналов "Моделист-конструктор", "Сам себе мастер", "Юный техник" и т.п., либо почитать специализированный форум.
 <br>Я надеюсь, что вы не зря потратили усилия и данная статья хотя бы чем-то смогла помочь вам решить вопрос. В следующий раз я расскажу о том, как починить спидометр или пульт от телевизора.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
