--- a/497.html
+++ b/497.html
@@ -61,6 +61,12 @@
 <br>Если вы все же решили самостоятельно заниматься ремонтом, то сначала есть смысл узнать о том, как заниматься починкой бензопилы. Для этой цели стоит воспользоваться каким-то поисковиком, например, yahoo.
 <br>Я думаю, что данная статья помогла вам решить данную задачу. В следующий раз я напишу о том, как отремонтировать деревянный пол либо лоджию.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
