--- a/500.html
+++ b/500.html
@@ -62,6 +62,12 @@
 <br>Итак, если вы решили самому выполнять ремонт, то сначала стоит узнать о том, как делать починку ботинков. Для этого можно воспользоваться поисковиком, или просмотреть старые подишивки журналов "Моделист-конструктор", "Домашняя мастерская" и так далее, или попытаться найти ответ на данный вопрос на популярном сообществе.
 <br>Думаю, что вы не напрасно потратили свое драгоценное время и эта статья поможет вам выполнить починку ботинков. В следующий раз я напишу о том, как починить радиоприемник либо лампу дневного света.
 <!-- Код после текста --></p>
+
+
+<a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
+<a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://rollisa.github.io/den.html">Рольшторы, как декор</a></br>
+<a href="https://rolshtori.github.io/den.html">"День-ночь" на пластиковые окна</a></br></br>
 																	</div><!-- .entry-content -->
 				</div><!-- #post-## -->
 
