--- a/203.html
+++ b/203.html
@@ -67,6 +67,7 @@
 
 <a href="https://rolshtori.github.io/">Рольшторы в гостиную</a></br>
 <a href="https://rollisa.github.io/">Рулонные шторы</a></br>
+<a href="https://shtori.github.io/">АНГЛИЙСКИЕ ШТОРЫ</a></br>
 <a href="https://rollisa.github.io/roll.html">Шторы в Минске</a></br>
 <a href="https://rollssby.github.io/">Особенности рольштор</a></br></br>
 																	</div><!-- .entry-content -->
