--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
 </h1>
 					
 					<div class="entry entry-content">
-						<p><!-- Код перед текстом --><img src="img.jpg" border="1" style="float: right; margin: 4px 0 4px 12px;">Рады представить наш каталог статей. Здесь вы имеете возможность прочесть наиболее интересные обзоры и анонсы.
-<br>У нас собраны статьи на разнообразные темы. Абсолютно любой пользователь интернета здесь обязательно сможет найти для себя что-то познавательное и новое.
-<br>На страницах этого сайта представлены важные новости таких городов, как Набережные Челны, Жуковский, Новгород, Южно-Сахалинск, Иркутск, Сергиев Посад, Копейск и Ульяновск.
+						<p><!-- Код перед текстом --><img src="img.jpg" border="1" style="float: right; margin: 4px 0 4px 12px;">Рады представить наш каталог <a href="https://github.com/bonoraly/bonoraly.github.io">статей</a>. Здесь вы имеете возможность прочесть наиболее интересные обзоры и анонсы.
+<br>У нас собраны статьи на разнообразные темы. Абсолютно любой пользователь <a href="https://github.com/poshiva/poshiva.github.io">интернета</a> здесь обязательно сможет найти для себя что-то познавательное и новое.
+<br>На <a href="https://github.com/poshiva/webcss">страницах</a> этого сайта представлены важные новости таких городов, как Набережные Челны, Жуковский, Новгород, Южно-Сахалинск, Иркутск, Сергиев Посад, Копейск и Ульяновск.
 <br>Все без исключения публикуемые на нашем сайте статьи проходят строгую модерацию. 
-<br>Надеемся, что на страницах нашего <a href="https://github.com/bonoraly/bonoraly.github.io">сайта</a> вы найдете для себя что-то познавательное и в перспективе станете постоянным пользователем нашего портала.
+<br>Надеемся, что на страницах нашего <a href="https://github.com/poshiva/cssss">сайта</a> вы найдете для себя что-то познавательное и в перспективе станете постоянным пользователем нашего портала.
 
 <!--ajhooyte--><!--/ajhooyte-->
 <br><br>Последние статьи:
@@ -291,3 +291,4 @@
 
 
 </body></html>
+
